# maplescript

./: .clangd  CMakeLists.txt  CMakePresets.json  Functions.cmake  example.maple  example.msc  test.maple  test.ms
include/maplescript/memory/: alloc.h  mem.h
include/maplescript/structures/: hashmap.h  string.h
src/: main.c  tests.c  tests.h
src/cli/: arg.c  arg.h  assembler.c  assembler.h
src/data/: fs.c  fs.h  map.c  map.h  strings.c  strings.h  vec.c
src/memory/: alloc.c  mem.c  mem.h  stack.c  stack.h
src/structures/: hashmap.c  hashmap.h  map.c  map.h  numerals.h  stack.c  stack.h  string.c  string.h  stringext.c  stringext.h  strings.c  types.c  types.h  vec.c  vec.h  vector.c  vector.h
src/vm/: allocator.h  asm.c  asm.h  bytecode.c  bytecode.h  chunk.c  chunk.h  instruction.c  instruction.h  instructions.c  instructions.h  opcodes.h  state.c  state.h  types.h  unit.c  unit.h  vm.c  vm.h
